--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   </head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light" aria-label="Third navbar example">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Bean Recipe Finder</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBarMenu" aria-controls="navBarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,12 +13,15 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navBarMenu">
-          <ul class="navbar-nav ml-auto mb-2 mb-sm-0">
+          <ul class="navbar-nav mr-auto mb-2 mb-sm-0">
             <li class="nav-item active">
               <a class="nav-link" aria-current="page" href="home.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="grocerylist.html">Grocery List</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Login</a>
@@ -27,8 +30,10 @@
         </div>
       </div>
     </nav>
+    <div class="homePage">
     <div class="searchBar">
-      <h2> Search for a recipe or ingredient <h2>
+      <h2> Search for a recipe</h2>
+      <h2> or ingredient</h2>
       <form>
           <input class="form-control" type="text" placeholder="Search" aria-label="Search">
       </form>
@@ -36,13 +41,55 @@
     <div class="advancedSearch">
       <a href="#">Advanced Search ></a>
     </div>
+  </div>
 
     <div class="trendingNav">
-      <h2>Inseason Trending Recipes</h2>
-      <a class = "trending"href="#">Trending 1</a>
-      <a class = "trending"href="#">Trending 2</a>
-      <a class = "trending"href="#">Trending 3</a>
-    </div
+      <h2 class=trendheading>Inseason Trending Recipes</h2>
+      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+          <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+
+            <div class="container">
+              <div class="carousel-caption text-start">
+                <img class = "dalgonacoffee" src = "HackDavis Images/Dalgona-Coffee.jpg">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+
+            <div class="container">
+              <div class="carousel-caption">
+                <img class = "dalgonacoffee" src = "HackDavis Images/Dalgona-Coffee.jpg">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+
+            <div class="container">
+              <div class="carousel-caption text-end">
+                <img class = "dalgonacoffee" src = "HackDavis Images/Dalgona-Coffee.jpg">
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
+      </div>
+    </div>
 
     <div class="appInfo">
       <div class="missionstatement">
@@ -60,6 +107,18 @@
           in culpa qui officia deserunt mollit anim id est laborum."
         </p>
       </div>
+    </div>
+
+    <div class = "potbackground">
+      <div id="wrap">
+        <div class="steam" id="steam-1"></div>
+        <div class="steam" id="steam-2"></div>
+        <div class="steam" id="steam-3"></div>
+        <div class="steam" id="steam-4"></div>
+      </div>
+      <img class = "potlid" src = "HackDavis Images/pot.png">
+      <br />
+      <img class = "potbottom" src = "HackDavis Images/potbottom.png">
     </div>
 
     <div class="contactInfo">
