--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Home | AppName</title>
-    <link rel="stylesheet" href="home.css"
+    <link rel="stylesheet" href="home.css" />
   </head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <body>
@@ -30,18 +30,25 @@
         </div>
       </div>
     </nav>
+
+
     <div class="homePage">
-    <div class="searchBar">
-      <h2> Search for a recipe</h2>
-      <h2> or ingredient</h2>
-      <form>
-          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-      </form>
+      <div class="homePage-center">
+              <h3 class="homePage-text">Healthy • Fresh • Local</h3>
+            <div class="homePage-search">
+              <form class="searchBar">
+                  <input class="form-control" type="text" placeholder="Search for a recipe or ingredient to get started..." aria-label="Search">
+              </form>
+            </div>
+
+          <div class="advancedSearch">
+            <a href="#">Advanced Search ></a>
+          </div>
+
+      </div>
     </div>
-    <div class="advancedSearch">
-      <a href="#">Advanced Search ></a>
-    </div>
-  </div>
+
+
 
     <div class="trendingNav">
       <h2 class=trendheading>Inseason Trending Recipes</h2>
@@ -136,6 +143,12 @@
       </div>
     </div>
 
+    <div class="summary">
+    <h6>Website Links<h6>
+    <a href="#">Grocery list</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
