--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -128,26 +128,30 @@
       <img class = "potbottom" src = "HackDavis Images/potbottom.png">
     </div>
 
-    <div class="contactInfo">
-      <div class="AlvinContact">
+    <div class="contactInfo displayinLine">
+      <div class="AlvinContact displayinLine">
+        <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
         <p>Alvy's</p>
-        <a href="#">Facebook</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Github</a>
       </div>
-      <div class="AngieContact">
-        <p>Angie's</p>
-        <a href="#">Facebook</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Github</a>
-      </div>
-    </div>
 
-    <div class="summary">
-    <h6>Website Links<h6>
-    <a href="#">Grocery list</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+      <div class = "socialIcons displayinLine">
+        <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
+        <a href="#">Facebook</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Github</a>
+      </div>
+
+      <div class="AngieContact displayinLine">
+        <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
+        <p>Angie's</p>
+      </div>
+
+      <div class = "socialIcons displayinLine">
+        <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
+        <a href="#">Facebook</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Github</a>
+      </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
