--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -98,13 +98,10 @@
       </div>
     </div>
 
-    <div class="appInfo">
-      <div class="missionstatement">
+   <div class="appInfo">
+
+      <div class="missionstatement fade-in">
         <p>We're committed to healthy, inseason eating.
-        </p>
-      </div>
-      <div class="missionstatement">
-        <p>
           "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -114,8 +111,6 @@
           in culpa qui officia deserunt mollit anim id est laborum."
         </p>
       </div>
-    </div>
-
     <div class = "potbackground">
       <div id="wrap">
         <div class="steam" id="steam-1"></div>
@@ -123,34 +118,27 @@
         <div class="steam" id="steam-3"></div>
         <div class="steam" id="steam-4"></div>
       </div>
-      <img class = "potlid" src = "HackDavis Images/pot.png">
+      <img class = "potlid swing" src = "HackDavis Images/pot.png">
       <br />
       <img class = "potbottom" src = "HackDavis Images/potbottom.png">
     </div>
+  </div>
 
-    <div class="contactInfo displayinLine">
-      <div class="AlvinContact displayinLine">
+    <div class="contactInfo">
+      <div class="socialIcons">
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
-        <p>Alvy's</p>
       </div>
 
-      <div class = "socialIcons displayinLine">
+      <div class = "socialIcons">
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
-        <a href="#">Facebook</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Github</a>
       </div>
 
-      <div class="AngieContact displayinLine">
+      <div class="socialIcons">
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
-        <p>Angie's</p>
       </div>
 
-      <div class = "socialIcons displayinLine">
+      <div class = "socialIcons">
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
-        <a href="#">Facebook</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Github</a>
       </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
