--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -2,127 +2,52 @@
   <head>
     <title>Home | AppName</title>
     <link rel="stylesheet" href="home.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   </head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  
   <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bean Recipe Finder</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBarMenu" aria-controls="navBarMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navBarMenu">
-          <ul class="navbar-nav mr-auto mb-2 mb-sm-0">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="home.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="grocerylist.html">Grocery List</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="recipes.html">Recipes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
 
     <div class="homePage">
-      <div class="homePage-center">
-              <h3 class="homePage-text">Healthy • Fresh • Local</h3>
-            <div class="homePage-search">
-              <form class="searchBar">
-                  <input class="form-control" type="text" placeholder="Search for a recipe or ingredient to get started..." aria-label="Search">
-              </form>
-            </div>
+      <div class="homePage-box">
+        <div class="homePage-center">
+          <h3 class="homePage-text">healthy • fresh • local</h3>
+          <div class="homePage-search">
+            <form class="searchBar">
+                <input class="form-control" type="text" placeholder="Search for a recipe or ingredient to get started..." aria-label="Search">
+            </form>
+          </div>
 
           <div class="advancedSearch">
             <a href="#">Advanced Search ></a>
           </div>
-
-      </div>
-    </div>
-
-
-
-    <div class="trendingNav">
-      <h2 class=trendheading>Inseason Trending Recipes</h2>
-      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
-          <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-            <div class="container">
-              <div class="carousel-caption text-start">
-                <img class = "dalgonacoffee" src = "HackDavis Images/Dalgona-Coffee.jpg">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-            <div class="container">
-              <div class="carousel-caption">
-                <img class = "dalgonacoffee" src = "HackDavis Images/Dalgona-Coffee.jpg">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-            <div class="container">
-              <div class="carousel-caption text-end">
-                <img class = "dalgonacoffee" src = "HackDavis Images/Dalgona-Coffee.jpg">
-              </div>
-            </div>
-          </div>
         </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </a>
       </div>
     </div>
 
-   <div class="appInfo">
-
-      <div class="missionstatement fade-in">
-        <p>We're committed to healthy, inseason eating.
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-          nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-          in culpa qui officia deserunt mollit anim id est laborum."
-        </p>
+    <div class="appInfo">
+        <div class="missionstatement fade-in">
+          <p>We're committed to healthy, inseason eating.
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+            in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+            in culpa qui officia deserunt mollit anim id est laborum."
+          </p>
+        </div>
+      <div class = "potbackground">
+        <div id="wrap">
+          <div class="steam" id="steam-1"></div>
+          <div class="steam" id="steam-2"></div>
+          <div class="steam" id="steam-3"></div>
+          <div class="steam" id="steam-4"></div>
+        </div>
+        <img class = "potlid swing" src = "HackDavis Images/pot.png">
+        <br />
+        <img class = "potbottom" src = "HackDavis Images/potbottom.png">
       </div>
-    <div class = "potbackground">
-      <div id="wrap">
-        <div class="steam" id="steam-1"></div>
-        <div class="steam" id="steam-2"></div>
-        <div class="steam" id="steam-3"></div>
-        <div class="steam" id="steam-4"></div>
-      </div>
-      <img class = "potlid swing" src = "HackDavis Images/pot.png">
-      <br />
-      <img class = "potbottom" src = "HackDavis Images/potbottom.png">
     </div>
-  </div>
 
     <div class="contactInfo">
       <div class="socialIcons">
