--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -10,6 +10,7 @@
     <div class="homePage">
       <div class="homePage-box">
         <div class="homePage-center">
+          <h2>yummy</h2>
           <h3 class="homePage-text">healthy • fresh • local</h3>
           <div class="homePage-search">
             <form class="searchBar">
@@ -26,27 +27,27 @@
 
     <div class="appInfo">
         <div class="missionstatement fade-in">
-          <p>We're committed to healthy, inseason eating.
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-            in culpa qui officia deserunt mollit anim id est laborum."
-          </p>
+          <h1>We're committed to the health of our communities.</h1>
         </div>
-      <div class = "potbackground">
-        <div id="wrap">
-          <div class="steam" id="steam-1"></div>
-          <div class="steam" id="steam-2"></div>
-          <div class="steam" id="steam-3"></div>
-          <div class="steam" id="steam-4"></div>
+        <div class="appInfo-2">
+          <div class = "potbackground">
+                  <div id="wrap">
+                    <div class="steam" id="steam-1"></div>
+                    <div class="steam" id="steam-2"></div>
+                    <div class="steam" id="steam-3"></div>
+                    <div class="steam" id="steam-4"></div>
+                  </div>
+                  <img class = "potlid swing" src = "HackDavis Images/pot.png">
+                  <br />
+                  <img class = "potbottom" src = "HackDavis Images/potbottom.png">
+                </div>
+                <div class="missionstatement-paragraph">
+                  <h4>We're all about eating big in nutrition and shopping small in business. 
+                    We strive to support our local farmer's markets and small businesses all while giving you the best recipes based on your dietary needs.
+                  </h4>
+          </div>
         </div>
-        <img class = "potlid swing" src = "HackDavis Images/pot.png">
-        <br />
-        <img class = "potbottom" src = "HackDavis Images/potbottom.png">
-      </div>
+      
     </div>
 
     <div class="contactInfo">
