--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -4,9 +4,8 @@
     <link rel="stylesheet" href="home.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   </head>
-  
-  <body>
 
+  <body>
     <div class="homePage">
       <div class="homePage-box">
         <div class="homePage-center">
@@ -26,44 +25,37 @@
     </div>
 
     <div class="appInfo">
-        <div class="missionstatement fade-in">
-          <h1>We're committed to the health of our communities.</h1>
-        </div>
-        <div class="appInfo-2">
-          <div class = "potbackground">
-                  <div id="wrap">
-                    <div class="steam" id="steam-1"></div>
-                    <div class="steam" id="steam-2"></div>
-                    <div class="steam" id="steam-3"></div>
-                    <div class="steam" id="steam-4"></div>
-                  </div>
-                  <img class = "potlid swing" src = "HackDavis Images/pot.png">
-                  <br />
-                  <img class = "potbottom" src = "HackDavis Images/potbottom.png">
-                </div>
-                <div class="missionstatement-paragraph">
-                  <h4>We're all about eating big in nutrition and shopping small in business. 
+      <div class="missionstatement fade-in">
+        <p>We're all about eating big in nutrition and shopping small in business.
                     We strive to support our local farmer's markets and small businesses all while giving you the best recipes based on your dietary needs.
-                  </h4>
-          </div>
-        </div>
-      
+        </p>
+      </div>
+
+      <div class="steamwrap">
+        <div class="steam" id="steam-1"></div>
+        <div class="steam" id="steam-2"></div>
+        <div class="steam" id="steam-3"></div>
+        <div class="steam" id="steam-4"></div>
+      </div>
+
+    <div class = "additionalInfo">
+      <div class ="pot">
+      <img class = "potlid swing" src = "HackDavis Images/pot.png">
+      <br />
+      <img class = "potbottom" src = "HackDavis Images/potbottom.png">
     </div>
+      <div class = "missionstatement2 fade-in">
+        <p>We're all about eating big in nutrition and shopping small in business.
+                    We strive to support our local farmer's markets and small businesses all while giving you the best recipes based on your dietary needs.
+        </p>
+      </div>
+  </div>
 
     <div class="contactInfo">
       <div class="socialIcons">
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
-      </div>
-
-      <div class = "socialIcons">
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
-      </div>
-
-      <div class="socialIcons">
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
-      </div>
-
-      <div class = "socialIcons">
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
       </div>
     </div>
