--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -3,6 +3,7 @@
     <title>Home | AppName</title>
     <link rel="stylesheet" href="home.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/36f41ef42b.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -52,13 +53,18 @@
   </div>
 
     <div class="contactInfo">
-      <div class="socialIcons">
+      <div class="stove">
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
+        <a href = "https://github.com/angelayang2018" class="fab fa-github"></a>
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
+        <a href = "https://www.linkedin.com/in/angela-yang-985675202/" class="fab fa-linkedin-in"></a>
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
+        <a href = "https://github.com/alvin-agana/portfolio" class="fab fa-github"></a>
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
+        <a href = "https://www.linkedin.com/in/alvin-agana/" class="fab fa-linkedin-in"></a>
       </div>
-    </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+      </div>
+
   </body>
 </html>
