--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -19,7 +19,7 @@
           </div>
 
           <div class="advancedSearch">
-            <a href="#">Advanced Search ></a>
+            <a href="#">Advanced Search></a>
           </div>
         </div>
       </div>
@@ -27,6 +27,10 @@
 
     <div class="appInfo">
       <div class="missionstatement fade-in">
+        <div class="infoheader">
+        <h2 class = "infoheading">Local, small businesses</h2>
+        <i class="fas fa-seedling fa-4x"></i>
+      </div>
         <p>We're all about eating big in nutrition and shopping small in business.
                     We strive to support our local farmer's markets and small businesses all while giving you the best recipes based on your dietary needs.
         </p>
@@ -39,6 +43,15 @@
         <div class="steam" id="steam-4"></div>
       </div>
 
+      <div class="veggiewrap">
+        <div class="veggie" id="vsteam-1"><img src= "HackDavis Images/veggie3.png"></div>
+        <div class="veggie" id="vsteam-2"><img src= "HackDavis Images/fruit1.png"></div>
+        <div class="veggie" id="vsteam-3"><img src= "HackDavis Images/fruit2.png"></div>
+        <div class="veggie" id="vsteam-4"><img src= "HackDavis Images/fruit3.png"></div>
+        <div class="veggie" id="vsteam-5"><img src= "HackDavis Images/fruit4.png"></div>
+        <div class="veggie" id="vsteam-6"><img src= "HackDavis Images/fruit6.png"></div>
+      </div>
+
     <div class = "additionalInfo">
       <div class ="pot">
       <img class = "potlid swing" src = "HackDavis Images/pot.png">
@@ -46,8 +59,11 @@
       <img class = "potbottom" src = "HackDavis Images/potbottom.png">
     </div>
       <div class = "missionstatement2 fade-in">
-        <p>We're all about eating big in nutrition and shopping small in business.
-                    We strive to support our local farmer's markets and small businesses all while giving you the best recipes based on your dietary needs.
+        <div class="infoheader">
+        <h2 class = "infoheading">Inseasonal produce</h2>   <i class="far fa-snowflake fa-4x"></i>
+      </div>
+        <p>Shopping locally not only guarantees the freshest, most nurtrious produce but
+          also ensures that you are buying in season crops.
         </p>
       </div>
   </div>
@@ -55,13 +71,13 @@
     <div class="contactInfo">
       <div class="stove">
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
-        <a href = "https://github.com/angelayang2018" class="fab fa-github"></a>
+        <a href = "https://github.com/angelayang2018" class="fab fa-github fa-2x"></a>
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
-        <a href = "https://www.linkedin.com/in/angela-yang-985675202/" class="fab fa-linkedin-in"></a>
+        <a href = "https://www.linkedin.com/in/angela-yang-985675202/" class="fab fa-linkedin-in fa-2x"></a>
         <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
-        <a href = "https://github.com/alvin-agana/portfolio" class="fab fa-github"></a>
+        <a href = "https://github.com/alvin-agana/portfolio" class="fab fa-github fa-2x"></a>
         <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
-        <a href = "https://www.linkedin.com/in/alvin-agana/" class="fab fa-linkedin-in"></a>
+        <a href = "https://www.linkedin.com/in/alvin-agana/" class="fab fa-linkedin-in fa-2x"></a>
       </div>
 
       </div>
