--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -1,25 +1,25 @@
 <html>
   <head>
     <title>Home | AppName</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/36f41ef42b.js" crossorigin="anonymous"></script>
   </head>
-
+  
   <body>
-    <div class="homePage">
+
+    <div class="homePage" style="background: url(/static/img/foodbanner.jpg) center / cover no-repeat;">
       <div class="homePage-box">
         <div class="homePage-center">
           <h2>yummy</h2>
           <h3 class="homePage-text">healthy • fresh • local</h3>
           <div class="homePage-search">
-            <form class="searchBar">
-                <input class="form-control" type="text" placeholder="Search for a recipe or ingredient to get started..." aria-label="Search">
-            </form>
-          </div>
-
-          <div class="advancedSearch">
-            <a href="#">Advanced Search></a>
+            <form class="searchBar" action="/recipe" method="POST">
+              <input class="form-control" type="text" placeholder="Search for a recipe or ingredient to get started..." aria-label="Search" />
+              <input class="form-control" type="text" placeholder="Any diet restrictions? (vegetarian, gluten-free)" aria-label="Search" />
+              <input class="form-control" type="text" name="zipcode"placeholder="Your zip code!" aria-label="Search" />
+              <input type="submit" value="SUBMIT" class="submit-button" />
+          </form>
           </div>
         </div>
       </div>
@@ -44,19 +44,19 @@
       </div>
 
       <div class="veggiewrap">
-        <div class="veggie" id="vsteam-1"><img src= "HackDavis Images/veggie3.png"></div>
-        <div class="veggie" id="vsteam-2"><img src= "HackDavis Images/fruit1.png"></div>
-        <div class="veggie" id="vsteam-3"><img src= "HackDavis Images/fruit2.png"></div>
-        <div class="veggie" id="vsteam-4"><img src= "HackDavis Images/fruit3.png"></div>
-        <div class="veggie" id="vsteam-5"><img src= "HackDavis Images/fruit4.png"></div>
-        <div class="veggie" id="vsteam-6"><img src= "HackDavis Images/fruit6.png"></div>
+        <div class="veggie" id="vsteam-1"><img src= "/static/img/veggie3.png"></div>
+        <div class="veggie" id="vsteam-2"><img src= "/static/img/fruit1.png"></div>
+        <div class="veggie" id="vsteam-3"><img src= "/static/img/fruit2.png"></div>
+        <div class="veggie" id="vsteam-4"><img src= "/static/img/fruit3.png"></div>
+        <div class="veggie" id="vsteam-5"><img src= "/static/img/fruit4.png"></div>
+        <div class="veggie" id="vsteam-6"><img src= "/static/img/fruit6.png"></div>
       </div>
 
     <div class = "additionalInfo">
       <div class ="pot">
-      <img class = "potlid swing" src = "HackDavis Images/pot.png">
+      <img class = "potlid swing" src = "/static/img/pot.png">
       <br />
-      <img class = "potbottom" src = "HackDavis Images/potbottom.png">
+      <img class = "potbottom" src = "/static/img/potbottom.png">
     </div>
       <div class = "missionstatement2 fade-in">
         <div class="infoheader">
@@ -70,13 +70,13 @@
 
     <div class="contactInfo">
       <div class="stove">
-        <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
+        <img class = "ovenknob" src = "/static/img/kitchenknob.png" />
         <a href = "https://github.com/angelayang2018" class="fab fa-github fa-2x"></a>
-        <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
+        <img class = "ovenknob knobactive" src = "/static/img/kitchenknob.png" />
         <a href = "https://www.linkedin.com/in/angela-yang-985675202/" class="fab fa-linkedin-in fa-2x"></a>
-        <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
+        <img class = "ovenknob" src = "/static/img/kitchenknob.png" />
         <a href = "https://github.com/alvin-agana/portfolio" class="fab fa-github fa-2x"></a>
-        <img class = "ovenknob knobactive" src = "HackDavis Images/kitchenknob.png" />
+        <img class = "ovenknob knobactive" src = "/static/img/kitchenknob.png" />
         <a href = "https://www.linkedin.com/in/alvin-agana/" class="fab fa-linkedin-in fa-2x"></a>
       </div>
 
