--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -68,17 +68,25 @@
       </div>
   </div>
 
-    <div class="contactInfo">
+   <div class="contactInfo">
       <div class="stove">
-        <img class = "ovenknob" src = "/static/img/kitchenknob.png" />
-        <a href = "https://github.com/angelayang2018" class="fab fa-github fa-2x"></a>
-        <img class = "ovenknob knobactive" src = "/static/img/kitchenknob.png" />
-        <a href = "https://www.linkedin.com/in/angela-yang-985675202/" class="fab fa-linkedin-in fa-2x"></a>
-        <img class = "ovenknob" src = "/static/img/kitchenknob.png" />
-        <a href = "https://github.com/alvin-agana/portfolio" class="fab fa-github fa-2x"></a>
-        <img class = "ovenknob knobactive" src = "/static/img/kitchenknob.png" />
-        <a href = "https://www.linkedin.com/in/alvin-agana/" class="fab fa-linkedin-in fa-2x"></a>
+        <div class = "inactive">
+        <img class = "ovenknob" src = "/static/kitchenknob.png" />
       </div>
+        <div class = "socialIcon">
+        <a href = "https://github.com/angelayang2018" class="fab fa-github fa-1x"></a>
+        <img class = "ovenknob" src = "/static/kitchenknobalvin.png" />
+          <a href = "https://www.linkedin.com/in/angela-yang-985675202/" class="fab fa-linkedin-in fa-1x"></a>
+      </div>
+      <div class = "inactive">
+        <img class = "ovenknob" src = "/static/kitchenknob.png" />
+        </div>
+        <div class = "socialIcon">
+        <a href = "https://github.com/alvin-agana/portfolio" class="fab fa-github fa-1x"></a>
+        <img class = "ovenknob" src = "/static/kitchenknobangie.png" />
+        <a href = "https://www.linkedin.com/in/alvin-agana/" class="fab fa-linkedin-in fa-1x"></a>
+      </div>
+    </div>
 
       </div>
 
