--- a/HTML HackDavis/home.html
+++ b/HTML HackDavis/home.html
@@ -25,65 +25,64 @@
       </div>
     </div>
 
-    <div class="appInfo">
+   <div class="appInfo">
       <div class="missionstatement fade-in">
         <div class="infoheader">
-        <h2 class = "infoheading">Local, small businesses</h2>
-        <i class="fas fa-seedling fa-4x"></i>
+        <h2 class = "infoheading">Local, small businesses</h2> <i class="fas fa-seedling fa-4x"></i>
       </div>
-        <p>We're all about eating big in nutrition and shopping small in business.
-                    We strive to support our local farmer's markets and small businesses all while giving you the best recipes based on your dietary needs.
+      <hr />
+      <div class = textInfo>
+        <p >We're all about eating <b>big</b> in nutrition and shopping <em>small</em> in business.
+                  <br /> <br /> We strive to support our local farmer's markets and small businesses all while giving you the best recipes based on your dietary needs.
         </p>
       </div>
-
-      <div class="steamwrap">
-        <div class="steam" id="steam-1"></div>
-        <div class="steam" id="steam-2"></div>
-        <div class="steam" id="steam-3"></div>
-        <div class="steam" id="steam-4"></div>
       </div>
 
       <div class="veggiewrap">
-        <div class="veggie" id="vsteam-1"><img src= "/static/img/veggie3.png"></div>
-        <div class="veggie" id="vsteam-2"><img src= "/static/img/fruit1.png"></div>
-        <div class="veggie" id="vsteam-3"><img src= "/static/img/fruit2.png"></div>
-        <div class="veggie" id="vsteam-4"><img src= "/static/img/fruit3.png"></div>
-        <div class="veggie" id="vsteam-5"><img src= "/static/img/fruit4.png"></div>
-        <div class="veggie" id="vsteam-6"><img src= "/static/img/fruit6.png"></div>
+        <div class="veggie" id="vsteam-1"><img src= "HackDavis Images/veggie3.png"></div>
+        <div class="veggie" id="vsteam-2"><img src= "HackDavis Images/fruit1.png"></div>
+        <div class="veggie" id="vsteam-3"><img src= "HackDavis Images/fruit2.png"></div>
+        <div class="veggie" id="vsteam-4"><img src= "HackDavis Images/fruit3.png"></div>
+        <div class="veggie" id="vsteam-5"><img src= "HackDavis Images/fruit4.png"></div>
+        <div class="veggie" id="vsteam-6"><img src= "HackDavis Images/fruit6.png"></div>
       </div>
 
     <div class = "additionalInfo">
       <div class ="pot">
-      <img class = "potlid swing" src = "/static/img/pot.png">
+      <img class = "potlid swing" src = "HackDavis Images/pot.png">
       <br />
-      <img class = "potbottom" src = "/static/img/potbottom.png">
+      <img class = "potbottom" src = "HackDavis Images/potbottom.png">
     </div>
       <div class = "missionstatement2 fade-in">
         <div class="infoheader">
         <h2 class = "infoheading">Inseasonal produce</h2>   <i class="far fa-snowflake fa-4x"></i>
       </div>
-        <p>Shopping locally not only guarantees the freshest, most nurtrious produce but
-          also ensures that you are buying in season crops.
+      <hr />
+      <div class = textInfo>
+        <p>Shopping locally not only guarantees the <em>freshest, most nurtrious</em> produce but
+          also ensures that you are buying in season crops. Add on to here because otherwise it doesn't look good lmao.
         </p>
       </div>
+      </div>
   </div>
+</div>
 
-   <div class="contactInfo">
+    <div class="contactInfo">
       <div class="stove">
         <div class = "inactive">
-        <img class = "ovenknob" src = "/static/kitchenknob.png" />
+        <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
       </div>
         <div class = "socialIcon">
         <a href = "https://github.com/angelayang2018" class="fab fa-github fa-1x"></a>
-        <img class = "ovenknob" src = "/static/kitchenknobalvin.png" />
+        <img class = "ovenknob" src = "HackDavis Images/kitchenknobalvin.png" />
           <a href = "https://www.linkedin.com/in/angela-yang-985675202/" class="fab fa-linkedin-in fa-1x"></a>
       </div>
       <div class = "inactive">
-        <img class = "ovenknob" src = "/static/kitchenknob.png" />
+        <img class = "ovenknob" src = "HackDavis Images/kitchenknob.png" />
         </div>
         <div class = "socialIcon">
         <a href = "https://github.com/alvin-agana/portfolio" class="fab fa-github fa-1x"></a>
-        <img class = "ovenknob" src = "/static/kitchenknobangie.png" />
+        <img class = "ovenknob" src = "HackDavis Images/kitchenknobangie.png" />
         <a href = "https://www.linkedin.com/in/alvin-agana/" class="fab fa-linkedin-in fa-1x"></a>
       </div>
     </div>
