--- a/HTML HackDavis/recipe.html
+++ b/HTML HackDavis/recipe.html
@@ -14,12 +14,14 @@
                     <img class= "recipe-box-image" src = "HackDavis Images/fruit4.png">
                     <h1 class = nameFood>STRAWBERRY</h1>
                   </div>
-                    <p>is in Season!</p>
                   </div>
 
                 <div class="food-container">
                   <div class = "headRecipe">
-                    <h2>------------------------Recipes------------------------</h2>
+                    <h2>Recipes</h2>
+                    <hr />
+                  </div>
+                    <div class = "littleRecipe">
                     <p>with Strawberries</p>
                   </div>
                     <div class="info-food">
@@ -97,11 +99,13 @@
                                 </div>
                     </div>
                 </div>
+
                 <div class = "divider1">
                   <h2>Locations to Purchase Produce</h2>
                   <p>Next time you go shopping, consider stopping by your local farmer's market for the fresh produce!</p>
                 </div>
-                <div market-container>
+
+                <div class = "market-container">
                     <div class="market-box">
                             <span class="market">ADD YOUR CODE HERE.</span>
                             <span class="market">ADD YOUR CODE HERE.</span>
